--- a/assests/Home/Homepage.html
+++ b/assests/Home/Homepage.html
@@ -109,6 +109,7 @@
         </section>
       </aside>
     </section>
+    <section></section>
 
     <footer class="footer"></footer>
     <script src="../scripts/script.js"></script>
