Added schooling section

--- a/assests/Home/Homepage.html
+++ b/assests/Home/Homepage.html
@@ -76,14 +76,13 @@
         </section>
       </aside>
       <aside class="utility-box">
-        <button class="aboutme-btn utility-btn" onclick="ExperienceChange()">
+        <button class="aboutme-btn utility-btn" onclick="schooChange()">
           Schooling
         </button>
-        <section class="experience utility-sec">
-          Had one year of work experince in Mechanical Field where working as
-          Quality Engineer taking incharge of mutliple department. In-charge of
-          Quality test labs and In-charge of Foam plant and In-charge of
-          Incoming Inspection department.
+        <section class="schooling utility-sec">
+          I completed my Schooling in my hometown and scored
+          <cite>9.5 CGPA</cite> in my Schooling studied at Viswa Bharathi High
+          School.
         </section>
       </aside>
       <aside class="utility-box">
@@ -91,10 +90,8 @@
           High-school
         </button>
         <section class="experience">
-          Had one year of work experince in Mechanical Field where working as
-          Quality Engineer taking incharge of mutliple department. In-charge of
-          Quality test labs and In-charge of Foam plant and In-charge of
-          Incoming Inspection department.
+          Later on, completed my secondary education in Mother Teresa Junior
+          College with Percentaile of <cite>95.7</cite>.
         </section>
       </aside>
       <aside class="utility-box">
@@ -109,7 +106,6 @@
         </section>
       </aside>
     </section>
-    <section></section>
 
     <footer class="footer"></footer>
     <script src="../scripts/script.js"></script>
