added schooling in the home list

--- a/assests/Home/Homepage.html
+++ b/assests/Home/Homepage.html
@@ -76,7 +76,7 @@
         </section>
       </aside>
       <aside class="utility-box">
-        <button class="aboutme-btn utility-btn" onclick="schooChange()">
+        <button class="aboutme-btn utility-btn" onclick="schoolChange()">
           Schooling
         </button>
         <section class="schooling utility-sec">
