updated the footer

--- a/assests/Home/Homepage.html
+++ b/assests/Home/Homepage.html
@@ -86,28 +86,31 @@
         </section>
       </aside>
       <aside class="utility-box">
-        <button class="aboutme-btn" onclick="ExperienceChange()">
+        <button class="aboutme-btn" onclick="highSchoolChange()">
           High-school
         </button>
-        <section class="experience">
+        <section class="high-school">
           Later on, completed my secondary education in Mother Teresa Junior
           College with Percentaile of <cite>95.7</cite>.
         </section>
       </aside>
       <aside class="utility-box">
-        <button class="aboutme-btn" onclick="ExperienceChange()">
-          High-school
+        <button class="aboutme-btn" onclick="graduationChange()">
+          Graduation
         </button>
-        <section class="experience">
-          Had one year of work experince in Mechanical Field where working as
-          Quality Engineer taking incharge of mutliple department. In-charge of
-          Quality test labs and In-charge of Foam plant and In-charge of
-          Incoming Inspection department.
+        <section class="graduation">
+          I did my engineering in <cite>Mechanical</cite> stream and scored
+          overall CGPA of 9.02.
         </section>
       </aside>
     </section>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      copyright belongs to
+      <i class="fa fa-copyright" aria-hidden="true"></i>
+        noormohammedknr2@gmail.com</i
+      >
+    </footer>
     <script src="../scripts/script.js"></script>
   </body>
 </html>
