resume page updated

--- a/assests/Resume/Resume.html
+++ b/assests/Resume/Resume.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/Resume.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>your are in resume page</h1>
+    <section class="resume-body">
+      <h1 class="resume-title">Resume</h1>
+      <p>Overall View of Resume</p>
+      <img src="./resume-image.PNG" alt="resume" class="resume-img" />
+
+      <section class="resume-link">
+        <p>Google Drive Link of Resume</p>
+        <img src="./drive-link.PNG" alt="" />
+        <a
+          href="https://drive.google.com/drive/folders/1YdZk5S6aTI0HEvhTAEGz2yxL6ipHmwU_"
+          target="_blank"
+          >Drive-link</a
+        >
+        <p class="pdf">Pdf format of Resume</p>
+      </section>
+      <iframe
+        src="./Noor's_v2.pdf"
+        style="width: 50%; height: 100%; border: none"
+        class="pdf-drive"
+      ></iframe>
+    </section>
   </body>
 </html>
